--- a/wwr/about.html
+++ b/wwr/about.html
@@ -16,7 +16,7 @@
         <meta name="description" content="Découvrez l'univers de notre entreprise de rafting en eau vive. Apprenez-en davantage sur notre équipe, notre passion et nos aventures en pleine nature.">
         <meta name="author" content="ZAGADOU DAGBAME FRANCK">
         
-        <link rel="stylesheet" href="/wwr/rafting.css"> <!-- Le fichier CSS local -->
+        <link rel="stylesheet" href="rafting.css"> <!-- Le fichier CSS local -->
     </head>
     
 <body>
@@ -42,10 +42,10 @@
 
         <!-- Hero Section -->
         <div class="hero">
-            <img src="/wwr/images/photo2.jpg" alt="Rafting Adventure">
+            <img src="images/photo2.jpg" alt="Rafting Adventure">
             <h1>White Water Rafting</h1>
             <article>
-                <img src="/wwr/images01/side-canyon-sq.jpg" alt="Happy Rafting Client">
+                <img src="images01/side-canyon-sq.jpg" alt="Happy Rafting Client">
                 <p>Experience the thrill of the wild waters with White Water Rafting. Join us for unforgettable adventures and lifetime memories.</p>
             </article>
         </div>
@@ -61,15 +61,15 @@
             <h2>Adventure Awaits You!</h2>
             <div class="adventure-gallery">
                 <figure>
-                    <img src="/wwr/images/photo3.jpg" alt="Los Dientes del Diablo">
+                    <img src="images/photo3.jpg" alt="Los Dientes del Diablo">
                     <figcaption>Los Dientes del Diablo</figcaption>
                 </figure>
                 <figure>
-                    <img src="/wwr/images01/elves-chasm-landscape.jpg" alt="Big Mallard">
+                    <img src="images01/elves-chasm-landscape.jpg" alt="Big Mallard">
                     <figcaption>Big Mallard</figcaption>
                 </figure>
                 <figure>
-                    <img src="/wwr/images01/deso-boats.jpg" alt="Half Day Adventure">
+                    <img src="images01/deso-boats.jpg" alt="Half Day Adventure">
                     <figcaption>Half Day Adventure</figcaption>
                 </figure>
                 <figure>
