--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -14,7 +14,7 @@
         <meta name="description" content="Découvrez l'univers de notre entreprise de rafting en eau vive. Apprenez-en davantage sur notre équipe, notre passion et nos aventures en pleine nature.">
         <meta name="author" content="ZAGADOU DAGBAME FRANCK">
         
-        <link rel="stylesheet" href="/wwr/rafting.css"> <!-- Le fichier CSS local -->
+        <link rel="stylesheet" href="rafting.css"> <!-- Le fichier CSS local -->
     </head>
     <body>
         <!-- En-tête -->
@@ -61,24 +61,24 @@
                     <figcaption>Jane Smith - Coordinatrice des réservations</figcaption>
                 </figure>
                 <figure class="employee">
-                    <img src="/wwr/images01/chuckwalla2.jpg" alt="Paul Brown, Responsable sécurité">
+                    <img src="images01/chuckwalla2.jpg" alt="Paul Brown, Responsable sécurité">
                     <figcaption>Paul Brown - Responsable sécurité</figcaption>
                 </figure>
                 <!-- Ajout de nouvelles images -->
                 <figure class="employee">
-                    <img src="/wwr/images01/deso-2kayaks.jpg" alt="Emma Wilson, Guide">
+                    <img src="images01/deso-2kayaks.jpg" alt="Emma Wilson, Guide">
                     <figcaption>Emma Wilson - Guide</figcaption>
                 </figure>
                 <figure class="employee">
-                    <img src="/wwr/images01/deso-kayak.jpg" alt="Liam Johnson, Coordinateur">
+                    <img src="images01/deso-kayak.jpg" alt="Liam Johnson, Coordinateur">
                     <figcaption>Liam Johnson - Coordinateur</figcaption>
                 </figure>
                 <figure class="employee">
-                    <img src="/wwr/images01/elves-chasm-landscape.jpg" alt="Sophia Brown, Responsable matériel">
+                    <img src="images01/elves-chasm-landscape.jpg" alt="Sophia Brown, Responsable matériel">
                     <figcaption>Sophia Brown - Responsable matériel</figcaption>
                 </figure>
                 <figure class="employee">
-                    <img src="/wwr/images01/petroglyphs.jpg" alt="Olivia Davis, Guide">
+                    <img src="images01/petroglyphs.jpg" alt="Olivia Davis, Guide">
                     <figcaption>Olivia Davis - Guide</figcaption>
                 </figure>
             </section>
