--- a/wwr/home.html
+++ b/wwr/home.html
@@ -14,7 +14,7 @@
   <meta name="description" content="Découvrez l'univers de notre entreprise de rafting en eau vive. Apprenez-en davantage sur notre équipe, notre passion et nos aventures en pleine nature.">
   <meta name="author" content="ZAGADOU DAGBAME FRANCK">
   
-  <link rel="stylesheet" href="/wwr/rafting.css">
+  <link rel="stylesheet" href="rafting.css">
 </head>
 <body>
 
@@ -57,12 +57,12 @@
     <h2>Our Rafting Offerings</h2>
     <div class="grid-container">
       <div class="offer-item">
-        <img src="/wwr/images01/petroglyphs.jpg" alt="Calm River Rafting">
+        <img src="images01/petroglyphs.jpg" alt="Calm River Rafting">
         <h3>Calm River Rafting</h3>
         <p>Perfect for beginners, enjoy a serene rafting experience on calm rivers.</p>
       </div>
       <div class="offer-item">
-        <img src="/wwr/images01/salmon-interest.jpg" alt="Rapid River Rafting">
+        <img src="images01/salmon-interest.jpg" alt="Rapid River Rafting">
         <h3>Rapid River Rafting</h3>
         <p>Feel the adrenaline rush as you tackle fast-flowing rapids with expert guides.</p>
       </div>
