--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -14,7 +14,7 @@
         <meta name="description" content="Découvrez l'univers de notre entreprise de rafting en eau vive. Apprenez-en davantage sur notre équipe, notre passion et nos aventures en pleine nature.">
         <meta name="author" content="ZAGADOU DAGBAME FRANCK">
         
-        <link rel="stylesheet" href="/wwr/rafting.css"> <!-- Le fichier CSS local -->
+        <link rel="stylesheet" href="rafting.css"> <!-- Le fichier CSS local -->
     </head>
 <body>
     <!-- En-tête avec le logo et la navigation -->
@@ -47,21 +47,21 @@
                 <!-- Première description de voyage -->
                 <section class="trip">
                     <h3>Aventure sur la Rivière 1</h3>
-                    <img src="/wwr/images01/rafting53_600.jpg" alt="Aventure Rivière 1">
+                    <img src="images01/rafting53_600.jpg" alt="Aventure Rivière 1">
                     <p>Vivez l'excitation des rapides de classe 4 ! Cette aventure est parfaite pour ceux qui cherchent à relever un défi intense.</p>
                 </section>
 
                 <!-- Deuxième description de voyage -->
                 <section class="trip">
                     <h3>Voyage en Famille</h3>
-                    <img src="/wwr/images01/rafting58_600.jpg" alt="Rafting en Famille">
+                    <img src="images01/rafting58_600.jpg" alt="Rafting en Famille">
                     <p>Idéal pour les familles, ce voyage propose une expérience calme et pittoresque, avec des moments de partage en pleine nature.</p>
                 </section>
 
                 <!-- Troisième description de voyage -->
                 <section class="trip">
                     <h3>Défi Expert en Eau Vive</h3>
-                    <img src="/wwr/images01/river-evening.jpg" alt="Défi Expert">
+                    <img src="images01/river-evening.jpg" alt="Défi Expert">
                     <p>Ce voyage est réservé aux rafteurs expérimentés prêts à affronter des rapides parmi les plus difficiles.</p>
                 </section>
             </div>
