--- a/wwr/home.html
+++ b/wwr/home.html
@@ -14,7 +14,7 @@
   <meta name="description" content="Découvrez l'univers de notre entreprise de rafting en eau vive. Apprenez-en davantage sur notre équipe, notre passion et nos aventures en pleine nature.">
   <meta name="author" content="ZAGADOU DAGBAME FRANCK">
   
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="rafting.css">
 </head>
 <body>
 
