--- a/wwr/home.html
+++ b/wwr/home.html
@@ -25,7 +25,7 @@
         <a href="index.html"><img src="images/logo.png" alt="Rafting Adventures Logo"></a>
       </div>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">index</a></li>
         <li><a href="trips.html">Trips</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
