--- a/wwr/index.html
+++ b/wwr/index.html
@@ -57,12 +57,12 @@
     <h2>Our Rafting Offerings</h2>
     <div class="grid-container">
       <div class="offer-item">
-        <img src="/wwr/images01/petroglyphs.jpg" alt="Calm River Rafting">
+        <img src="images01/petroglyphs.jpg" alt="Calm River Rafting">
         <h3>Calm River Rafting</h3>
         <p>Perfect for beginners, enjoy a serene rafting experience on calm rivers.</p>
       </div>
       <div class="offer-item">
-        <img src="/wwr/images01/salmon-interest.jpg" alt="Rapid River Rafting">
+        <img src="images01/salmon-interest.jpg" alt="Rapid River Rafting">
         <h3>Rapid River Rafting</h3>
         <p>Feel the adrenaline rush as you tackle fast-flowing rapids with expert guides.</p>
       </div>
